lab5 implemented
